Full XSec working up to CMFD

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -165,7 +165,7 @@ set(UM2_SOURCES
     "src/physics/cross_section.cpp"
     "src/physics/nuclide.cpp"
     "src/physics/cross_section_library.cpp"
-    #"src/physics/material.cpp"
+    "src/physics/material.cpp"
     #"src/physics/cmfd.cpp"
     #    "src/mpact/model.cpp"
     #    "src/gmsh/base_gmsh_api.cpp"
