--- a/tests/physics/CMakeLists.txt
+++ b/tests/physics/CMakeLists.txt
@@ -2,4 +2,4 @@ add_um2_test(./cross_section.cpp)
 add_um2_test(./nuclide.cpp)
 add_um2_test(./cross_section_library.cpp)
 add_um2_test(./material.cpp)
-#add_um2_test(./cmfd.cpp)
+add_um2_test(./cmfd.cpp)
