WIP: output spectral radius and scattering ratio for coarse mesh

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -167,7 +167,7 @@ set(UM2_SOURCES
     "src/physics/cross_section_library.cpp"
     "src/physics/material.cpp"
     "src/physics/cmfd.cpp"
-    #"src/mpact/model.cpp"
+    "src/mpact/model.cpp"
     #    "src/gmsh/base_gmsh_api.cpp"
     #    "src/gmsh/io.cpp"
     #    "src/gmsh/model.cpp"
