WIP: speed up matrix operations for slow CMFD spectral radius calc

--- a/models/vera/CMakeLists.txt
+++ b/models/vera/CMakeLists.txt
@@ -1,2 +1,3 @@
 #add_um2_executable(./1a_nogap.cpp)
-add_um2_executable(./4_2d.cpp)
+add_um2_executable(./4_2d_unrodded.cpp)
+add_um2_executable(./4_2d_rodded.cpp)
