--- a/models/c5g7/CMakeLists.txt
+++ b/models/c5g7/CMakeLists.txt
@@ -1,3 +1,4 @@
 #add_um2_executable(./c5g7_2d_pin_standard_moc.cpp)
 add_um2_executable(./c5g7_2d.cpp)
+add_um2_executable(./c5g7_2d_kn_study.cpp)
 #add_um2_executable(./c5g7_standard_moc.cpp)
