--- a/models/CMakeLists.txt
+++ b/models/CMakeLists.txt
@@ -3,3 +3,4 @@ include(${PROJECT_SOURCE_DIR}/cmake/add_um2_executable.cmake)
 add_subdirectory(./c5g7)
 add_subdirectory(./vera)
 add_subdirectory(./fnr)
+add_subdirectory(./crocus)
