--- a/tests/stdlib/CMakeLists.txt
+++ b/tests/stdlib/CMakeLists.txt
@@ -1,7 +1,7 @@
 add_subdirectory(./memory)
 add_subdirectory(./utility)
 add_subdirectory(./math)
-add_subdirectory(./algorithm)
+#add_subdirectory(./algorithm)
 #add_subdirectory(./numeric)
 #add_subdirectory(./cstring)
 #um2_add_test(./vector.cpp)
