--- a/tests/stdlib/CMakeLists.txt
+++ b/tests/stdlib/CMakeLists.txt
@@ -1,9 +1,9 @@
 add_subdirectory(./memory)
 add_subdirectory(./utility)
 add_subdirectory(./math)
-#add_subdirectory(./algorithm)
-#add_subdirectory(./numeric)
-#add_subdirectory(./cstring)
-#um2_add_test(./vector.cpp)
-#um2_add_test(./string_view.cpp)
-#um2_add_test(./string.cpp)
+add_subdirectory(./algorithm)
+add_subdirectory(./numeric)
+add_subdirectory(./cstring)
+um2_add_test(./vector.cpp)
+um2_add_test(./string_view.cpp)
+um2_add_test(./string.cpp)
