--- a/tests/stdlib/math/CMakeLists.txt
+++ b/tests/stdlib/math/CMakeLists.txt
@@ -2,6 +2,7 @@ um2_add_test(./abs.cpp)
 um2_add_test(./copysign.cpp)
 um2_add_test(./exponential_functions.cpp)
 um2_add_test(./fma.cpp)
+um2_add_test(./hyperbolic_functions.cpp)
 um2_add_test(./inverse_hyperbolic_functions.cpp)
 um2_add_test(./inverse_trigonometric_functions.cpp)
 um2_add_test(./logarithms.cpp)
