WIP: formatting and bugfixes before release

--- a/tests/math/CMakeLists.txt
+++ b/tests/math/CMakeLists.txt
@@ -1,7 +1,7 @@
 um2_add_test(./morton.cpp)
 um2_add_test(./stats.cpp)
 um2_add_test(./vec.cpp)
-#um2_add_test(./mat.cpp)
-#um2_add_test(./quadratic_equation.cpp)
-#um2_add_test(./cubic_equation.cpp)
+um2_add_test(./mat.cpp)
+um2_add_test(./quadratic_equation.cpp)
+um2_add_test(./cubic_equation.cpp)
 #um2_add_test(./matrix.cpp)
