--- a/tests/math/CMakeLists.txt
+++ b/tests/math/CMakeLists.txt
@@ -4,4 +4,4 @@ um2_add_test(./vec.cpp)
 um2_add_test(./mat.cpp)
 um2_add_test(./quadratic_equation.cpp)
 um2_add_test(./cubic_equation.cpp)
-#um2_add_test(./matrix.cpp)
+um2_add_test(./matrix.cpp)
