--- a/cmake/config.hpp.in
+++ b/cmake/config.hpp.in
@@ -15,12 +15,12 @@
 #cmakedefine01 UM2_ENABLE_SIMD_VEC
 
 // External tools/dependencies
+#cmakedefine01 UM2_USE_BLAS_LAPACK
 #cmakedefine01 UM2_USE_CUDA
 // #cmakedefine01 UM2_USE_GMSH
 // #cmakedefine01 UM2_USE_HDF5
 #cmakedefine01 UM2_USE_OPENMP
 // #cmakedefine01 UM2_USE_PUGIXML
-// #cmakedefine01 UM2_USE_TBB
 
 // Max log level for compile-time filtering of log messages
 // clang-format off
