Matrix clean up + WIP: geometry

--- a/benchmarks/CMakeLists.txt
+++ b/benchmarks/CMakeLists.txt
@@ -1,5 +1,6 @@
 include(${PROJECT_SOURCE_DIR}/cmake/um2_add_benchmark.cmake)
 
 add_subdirectory(./stdlib)
+add_subdirectory(./math)
 #add_subdirectory(./geometry)
 #add_subdirectory(./mesh)
