Formatted geometry. WIP: mesh

--- a/tests/geometry/CMakeLists.txt
+++ b/tests/geometry/CMakeLists.txt
@@ -7,5 +7,5 @@ um2_add_test(./polytope/line_segment.cpp)
 um2_add_test(./polytope/triangle.cpp)
 um2_add_test(./polytope/quadrilateral.cpp)
 um2_add_test(./polytope/quadratic_segment.cpp)
-#um2_add_test(./polytope/quadratic_triangle.cpp)
-#um2_add_test(./polytope/quadratic_quadrilateral.cpp)
+um2_add_test(./polytope/quadratic_triangle.cpp)
+um2_add_test(./polytope/quadratic_quadrilateral.cpp)
