--- a/tests/mesh/CMakeLists.txt
+++ b/tests/mesh/CMakeLists.txt
@@ -5,7 +5,7 @@ um2_add_test(./regular_grid.cpp)
 um2_add_test(./rectilinear_grid.cpp)
 um2_add_test(./element_types.cpp)
 um2_add_test(./polytope_soup.cpp)
-#um2_add_test(./face_vertex_mesh/tri_mesh.cpp)
+um2_add_test(./face_vertex_mesh/tri_mesh.cpp)
 #um2_add_test(./face_vertex_mesh/quad_mesh.cpp)
 #um2_add_test(./face_vertex_mesh/quadratic_tri_mesh.cpp)
 #um2_add_test(./face_vertex_mesh/quadratic_quad_mesh.cpp)
