--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -7,5 +7,5 @@ add_subdirectory(./geometry)
 add_subdirectory(./mesh)
 add_subdirectory(./physics)
 add_subdirectory(./mpact)
-#add_subdirectory(./gmsh)
+add_subdirectory(./gmsh)
 #add_subdirectory(./api)
