--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -8,4 +8,4 @@ add_subdirectory(./mesh)
 add_subdirectory(./physics)
 add_subdirectory(./mpact)
 add_subdirectory(./gmsh)
-#add_subdirectory(./api)
+add_subdirectory(./api)
